Enable manual dispatch for update workflow

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,9 @@
 name: Daily Limiteds Update
 
 on:
+  workflow_dispatch:      # allows you to run it manually
   schedule:
-    - cron: '0 6 * * *'    # every day at 6 AM UTC
+    - cron: '0 6 * * *'   # every day at 6 AM UTC
 
 jobs:
   update:
