--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,15 +1,18 @@
 name: Daily Limiteds Update
 
 on:
-  workflow_dispatch:      # allows you to run it manually
+  workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *'   # every day at 6 AM UTC
+    - cron: '0 6 * * *'
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,8 +32,5 @@ jobs:
           git add _posts
           git commit -m "chore: update limiteds $(date -u +'%Y-%m-%d')" || echo "No new posts"
 
-      - name: Push & build
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+      - name: Push changes
+        run: git push origin main
