--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,23 +1,25 @@
 name: Daily Limiteds Update
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:      # enables manual runs
   schedule:
-    - cron: '0 6 * * *'
+    - cron: '0 6 * * *'   # every day at 6 AM UTC
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
           persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: '3.x'
 
       - name: Install requests
         run: pip install requests
@@ -27,8 +29,8 @@ jobs:
 
       - name: Commit new posts
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add _posts
           git commit -m "chore: update limiteds $(date -u +'%Y-%m-%d')" || echo "No new posts"
 
