--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,9 @@
 name: Daily Limiteds Update
 
 on:
-  workflow_dispatch:      # enables manual runs
+  workflow_dispatch:      # manual trigger
   schedule:
-    - cron: '0 6 * * *'   # every day at 6 AM UTC
+    - cron: '0 6 * * *'   # daily at 6 AM UTC
 
 jobs:
   update:
@@ -12,9 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,10 +27,15 @@ jobs:
 
       - name: Commit new posts
         run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add _posts
           git commit -m "chore: update limiteds $(date -u +'%Y-%m-%d')" || echo "No new posts"
 
-      - name: Push changes
-        run: git push origin main
+      - name: Push changes using GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # rewrite origin to include the token
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/miqflur/miqflur.github.io.git
+          git push origin main
