--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,14 +1,12 @@
-# .github/workflows/update.yml
-
 name: Weekly Roblox Limiteds Update
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *'   # every day at 6 AM UTC
+    - cron: '0 6 * * *'    # daily at 06:00 UTC
 
 permissions:
-  contents: write        # allow the job to commit & push
+  contents: write         # allow committing back to the repo
 
 jobs:
   update:
@@ -29,17 +27,17 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests beautifulsoup4
+          pip install requests
 
-      - name: Fetch this week’s limiteds
-        run: python fetch_limiteds.py
+      - name: Generate weekly limited posts
+        run: python generate_posts.py
 
       - name: Commit updated posts
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add _posts
-          git commit -m "chore: refresh weekly limiteds $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
+          git commit -m "chore: update weekly limiteds" || echo "No changes to commit"
 
       - name: Push changes
         env:
